# spu_webservice

./: .env  Cargo.toml  requirements.txt
migrations/2024-04-22-084303_create_enumerations/: up.sql
src/: main.rs  schema.rs
src/models/: enumeration.rs  mod.rs  user.rs
src/routes/: config.rs  enumeration.rs  enumeration_routes.rs  mod.rs  user_routes.rs
src/utils/: api_utils.rs  error_utils.rs  mod.rs
